template/envoy-config.yml
static_resources:
  listeners:
  - name: listener_0
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 3389
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          '@type': type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          codec_type: AUTO
          stat_prefix: ingress_http
          route_config:
            virtual_hosts:
            - name: ts_dev_vh
              domains: ['*']
              routes:
              - match:
                  safe_regex:
                    google_re2: {}
                    regex: /hela-gw\.(NodeController/WaitReady|Registry/(GetNodes)|Staking/(TokenSymbol|ConsensusParameters|Account|DelegationsTo|DelegationsFor|DelegationInfosFor|DebondingDelegationInfosFor|GetEvents)|Beacon/(GetEpoch)|Consensus/(SubmitTx|EstimateGas|GetBlock|GetChainContext|GetTransactionsWithResults|GetGenesisDocument|WatchBlocks|GetSignerNonce)|RuntimeClient/(Query|SubmitTx))
                route:
                  cluster: oasis_node_grpc
                  timeout: 0s
                  max_stream_duration:
                    grpc_timeout_header_max: 0s
              - match:
                  prefix: /hela-gw
                direct_response:
                  status: 404
                  body:
                    inline_string: 'You have to list every method you use in the envoy matcher.'
              cors:
                allow_origin_string_match:
                - exact: '*'
                allow_headers: content-type,x-grpc-web,x-user-agent
                expose_headers: grpc-status,grpc-message,grpc-status-details-bin
                max_age: '1728000'
          http_filters:
          - name: envoy.filters.http.grpc_web
            typed_config:
              '@type': type.googleapis.com/envoy.extensions.filters.http.grpc_web.v3.GrpcWeb
          - name: envoy.filters.http.cors
            typed_config:
              '@type': type.googleapis.com/envoy.extensions.filters.http.cors.v3.Cors
          - name: envoy.filters.http.router
            typed_config:
               '@type': type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
      transport_socket:
        name: envoy.transport_sockets.tls
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext
          common_tls_context:
            tls_certificates:
            - certificate_chain:
                filename: ../envoy.cert
              private_key:
                filename: ../envoy.key
  clusters:
  - name: oasis_node_grpc
    connect_timeout: 0.25s
    load_assignment:
      cluster_name: cluster_0
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              pipe:
                path: /home/ubuntu/oasis-deploy/validator-01/internal.sock  
    http2_protocol_options: {}
layered_runtime:
  layers:
  - name: static
    static_layer:
      re2:
        max_program_size:
          error_level: 1000000
